# sputnik-fullstack-test

./: .env.dev.example  .gitignore  README.md  docker-compose.dev.yml  package-lock.json
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 8a1c4f2e7b3d_add_sha256.py
backend/src/: app.py  models.py
backend/src/api/: __init__.py  dependencies.py  exception_handlers.py  schemas.py
backend/src/api/routers/: alerts.py  files.py
backend/src/core/: __init__.py  config.py  db.py  logging.py
backend/src/domain/: __init__.py  enums.py  exceptions.py  models.py
backend/src/repositories/: __init__.py  alert_repository.py  file_repository.py
backend/src/services/: __init__.py  alert_service.py  file_service.py  metadata_extractor.py  scan_service.py
backend/src/storage/: __init__.py  base.py  local.py
backend/src/tasks/: __init__.py  celery_app.py  process_file.py
backend/tests/: conftest.py  fakes.py  test_api_integration.py  test_file_service.py  test_metadata_extractor.py  test_scan_service.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/entities/alert/: api.ts  hooks.ts  types.ts
frontend/src/entities/alert/ui/: AlertsTable.tsx
frontend/src/entities/file/: api.ts  hooks.ts  types.ts
frontend/src/features/upload-file/: hooks.ts
frontend/src/shared/: config.ts
frontend/src/shared/api/: client.ts
frontend/src/shared/lib/: format.ts
frontend/src/shared/ui/: StatusBadge.tsx
(+2 files in other folders)
